--- a/gra_business/src/main/resources/templates/404.html
+++ b/gra_business/src/main/resources/templates/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:include="common/common"></head>
+<head>
+    <title>404</title>
+</head>
 <body>
-
-
 <div id="content">
     <div id="content-header">
         <div id="breadcrumb"> <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a> <a href="#">Sample pages</a> <a href="#" class="current">Error</a> </div>
