--- a/gra_business/src/main/resources/templates/login.html
+++ b/gra_business/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>403</title>
+    <title>Login</title>
 </head>
 <body>
 
@@ -9,18 +9,18 @@
 <div id="content">
     <div id="content-header">
         <div id="breadcrumb"> <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a> <a href="#">Sample pages</a> <a href="#" class="current">Error</a> </div>
-        <h1>Error 403</h1>
+        <h1>FAKE LOGIN</h1>
     </div>
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
                 <div class="widget-box">
                     <div class="widget-title"> <span class="icon"> <i class="icon-info-sign"></i> </span>
-                        <h5>Error 403</h5>
+                        <h5>FAKE LOGIN</h5>
                     </div>
                     <div class="widget-content">
                         <div class="error_ex">
-                            <h1>403</h1>
+                            <h1>FAKE LOGIN</h1>
                             <h3>Opps, You're lost.</h3>
                             <p>Access to this page is forbidden</p>
                             <a class="btn btn-warning btn-big"  href="/login">Back to Home</a> </div>
@@ -29,6 +29,10 @@
             </div>
         </div>
     </div>
+</div>
+<!--Footer-part-->
+<div class="row-fluid">
+    <div id="footer" class="span12"> 2017 &copy; yqj <a href="http://themedesigner.in/">Themedesigner.in</a> </div>
 </div>
 </body>
 </html>
