--- a/gra_business/src/main/resources/templates/album.html
+++ b/gra_business/src/main/resources/templates/album.html
@@ -11,6 +11,8 @@
         <i class="layui-icon">&#xe67c;</i>上传图片
     </button>
 
+    <table id="square" lay-filter="picSquare"></table>
+
 
     <script src="/static/js/layui-v2.4.3/layui.js"></script>
     <script src="/static/js/album.js"></script>
