add upload pic form.

--- a/gra_business/src/main/resources/templates/album.html
+++ b/gra_business/src/main/resources/templates/album.html
@@ -7,11 +7,14 @@
 </head>
 <body>
 
-    <button type="button" class="layui-btn" id="picUpload">
-        <i class="layui-icon">&#xe67c;</i>上传图片
-    </button>
+    <form>
+        <button type="button" class="layui-btn" id="picUpload">
+            <i class="layui-icon">&#xe67c;</i>上传图片
+        </button>
+        <input type="text" value="图片名称"/>
+    </form>
 
-    <table id="square" lay-filter="picSquare"></table>
+    <table id="square" lay-filte r="picSquare"></table>
 
 
     <script src="/static/js/layui-v2.4.3/layui.js"></script>
