update systemManage static source with addUser operation.

--- a/gra_business/src/main/resources/templates/systemManage.html
+++ b/gra_business/src/main/resources/templates/systemManage.html
@@ -75,7 +75,7 @@
             <div class="tab-pane fade" role="tabpanel" id="systemRole">
                 <!-- 角色列表表头 -->
                 <div class="searchUser">
-                    <a class="addBtn pull-right" data-toggle="modal" data-target="#userAdd" ><i  class="iconfont icon-tianjia mr10"></i>新增</a>
+                    <a class="addBtn pull-right" data-toggle="modal" data-target="#roleAdd" ><i  class="iconfont icon-tianjia mr10"></i>新增</a>
                     <form class="form-inline" id="con_from2">
                         <div class="form-group mgl15">
                             <label>搜索：</label>
@@ -98,7 +98,7 @@
             <div class="tab-pane fade" role="tabpanel" id="systemPermission">
                 <!-- 权限列表表头 -->
                 <div class="searchUser">
-                    <a class="addBtn pull-right" data-toggle="modal" data-target="#userAdd" ><i  class="iconfont icon-tianjia mr10"></i>新增</a>
+                    <a class="addBtn pull-right" data-toggle="modal" data-target="#permissionAdd" ><i  class="iconfont icon-tianjia mr10"></i>新增</a>
                     <form class="form-inline" id="con_from3">
                         <div class="form-group mgl15">
                             <label>搜索：</label>
@@ -294,13 +294,13 @@
                             <div class="layui-form-item">
                                 <label class="layui-form-label">密码</label>
                                 <div class="layui-input-block">
-                                    <input type="password" name="pwd" lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    <input type="password" name="password" lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                             <div class="layui-form-item">
                                 <label class="layui-form-label">密码</label>
                                 <div class="layui-input-block">
-                                    <input type="password" name="rePwd" lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    <input type="password" name="password" lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
                                 </div>
                             </div>
                         </div>
