--- a/gra_business/src/main/resources/templates/album.html
+++ b/gra_business/src/main/resources/templates/album.html
@@ -2,50 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>相册模块</title>
+    <title>square</title>
     <link rel="stylesheet" href="/static/js/layui-v2.4.3/css/layui.css" media="all">
+    <script src="/static/js/jquery-1.11.0.min.js"></script>
 </head>
 <body>
 
-    <form class="layui-form">
-        <div class="layui-form-item">
-            <label class="layui-form-label">图片名称</label>
-            <div class="layui-input-block">
-                <input type="text" name="name" placeholder="请输入图片名称" lay-verify="required" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">图片描述</label>
-            <div class="layui-input-block">
-                <input type="text" name="discribe" placeholder="" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">用户名</label>
-            <div class="layui-input-block">
-                <input type="text" name="userNickname" placeholder="" autocomplete="off" class="layui-input">
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">公开</label>
-            <div class="layui-input-block">
-                <select name="isPrivate" lay-filter="picType">
-                    <option value="">公开</option>
-                    <option value="true">私有</option>
-                </select>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <button type="button" class="layui-btn" id="picUpload" lay-submit lay-filter="picUpload">
-                <i class="layui-icon">&#xe67c;</i>上传图片
-            </button>
-        </div>
-    </form>
+    <div id="mainBody" class="layui-anim layui-anim-up layui-anim-loop">
+        TODO
+    </div>
 
-    <table id="square" lay-filte r="picSquare"></table>
-
-
-    <script src="/static/js/layui-v2.4.3/layui.js"></script>
-    <script src="/static/js/album.js"></script>
 </body>
+<script src="/static/js/layui-v2.4.3/layui.js"></script>
+<script>
+    //TODO 轮播or
+</script>
 </html>
