add layUI flow and lazy load.

--- a/gra_business/src/main/resources/templates/album.html
+++ b/gra_business/src/main/resources/templates/album.html
@@ -6,15 +6,51 @@
     <link rel="stylesheet" href="/static/js/layui-v2.4.3/css/layui.css" media="all">
     <script src="/static/js/jquery-1.11.0.min.js"></script>
 </head>
+<style>
+    .mainImg{
+        height: 50%;
+        height: 50%;
+    }
+</style>
 <body>
 
-    <div id="mainBody" class="layui-anim layui-anim-up layui-anim-loop">
-        TODO
-    </div>
+    <ul id="mainBody">
+    </ul>
 
 </body>
 <script src="/static/js/layui-v2.4.3/layui.js"></script>
 <script>
-    //TODO 轮播or
+    layui.use('flow', function(){
+    var $ = layui.jquery; //不用额外加载jQuery，flow模块本身是有依赖jQuery的，直接用即可。
+    var flow = layui.flow;
+    flow.load({
+        elem: '#mainBody' //指定列表容器
+        ,isLazyimg: true //是否懒加载
+        ,isAuto: false //页面底部自动加载
+        ,done: function(page, next){ //到达临界点（默认滚动触发），触发下一页
+            var lis = [];
+            //以jQuery的Ajax请求为例，请求下一页数据（注意：page是从2开始返回）
+            $.ajax({
+                url:  '/album/square',
+                method: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify({
+                  'pageNum': page,
+                  'pageSize': 5
+                }),
+                success(res){
+                    //假设你的列表返回在data集合中
+                    layui.each(res.data.list, function(index, item){
+                        lis.push('<li class="mainImg"><img lay-src="'+item.pathFtp+'" title='+ item.name+ '/></li>');
+                    });
+
+                    //执行下一页渲染，第二参数为：满足“加载更多”的条件，即后面仍有分页
+                    //pages为Ajax返回的总页数，只有当前页小于总页数的情况下，才会继续出现加载更多
+                    next(lis.join(''), page < res.data.pages);
+                }
+            });
+        }
+    });
+});
 </script>
 </html>
