update systemManage static source with admin no operation.

--- a/gra_business/src/main/resources/templates/systemManage.html
+++ b/gra_business/src/main/resources/templates/systemManage.html
@@ -492,6 +492,14 @@
         <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
         <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
     </script>
+    <script type="text/html" id="roleOption">
+        <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    </script>
+    <script type="text/html" id="permissionOption">
+        <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    </script>
 
     <script src="/static/js/systemManage.js"></script>
     <!-- <script src="D:\PCSHAO\IDEAworkspace\GrantCommon\gra_business\src\main\resources/static/static/js/systemManage.js"></script> -->
