update login. Now there is a lastUrl back when login success.

--- a/gra_business/src/main/resources/templates/index.html
+++ b/gra_business/src/main/resources/templates/index.html
@@ -6,8 +6,11 @@
 <body>
 <div>
     <h1>Entrance</h1>
-    <a href="/login">登录</a>
-    <a href="/album">相册</a>
+    <ul>
+        <li><a href="/login">登录</a></li>
+        <li><a href="/album/albumSquare">相册</a></li>
+        <li><a href="/user">用户管理</a></li>
+    </ul>
 </div>
 </body>
 </html>
