--- a/gra_business/src/main/resources/templates/userlogin.html
+++ b/gra_business/src/main/resources/templates/userlogin.html
@@ -22,7 +22,7 @@
                     contentType: "application/json",
                     success: function (res) {
                         if(10 == res.code) {
-                            window.location.href = "/user";
+                            window.location.href = res.data;
                         }
                         else
                             layer.msg("请检查用户名或密码！");
