--- a/gra_business/src/main/resources/templates/albumManage.html
+++ b/gra_business/src/main/resources/templates/albumManage.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+    <!-- 上传文件表单 -->
     <form class="layui-form">
         <div class="layui-form-item">
             <label class="layui-form-label">图片名称</label>
@@ -42,8 +43,13 @@
         </div>
     </form>
 
-    <table id="square" lay-filte r="picSquare"></table>
+    <table id="square" lay-filter="album"></table>
 
+    <!-- 表格操作toolbar -->
+    <script type="text/html" id="albumOption">
+        <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    </script>
 
     <script src="/static/js/layui-v2.4.3/layui.js"></script>
     <script src="/static/js/albumManage.js"></script>
